--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,8 @@ find_package(OpenCV REQUIRED)
 set(HEADERS "include")
 include_directories(${HEADERS} ${OpenCV_INCLUDE_DIRS})
 
-set(LIBS ${OpenCV_LIBRARIES})
+set(SRCS src/stitch.cpp)
+add_library(RECONSTRUCT_LIBS SHARED ${SRCS})
+
+list(APPEND LIBS ${OpenCV_LIBRARIES} RECONSTRUCT_LIBS)
 add_subdirectory(tests)
