--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,9 +4,14 @@ add_executable(translate test_translate.cpp)
 add_executable(test_math test_math.cpp)
 add_executable(test_svd test_SVD.cpp)
 add_executable(test_stitch test_stitch.cpp)
+add_executable(test_utils test_utils.cpp)
+add_executable(test_panorama test_panorama.cpp)
 
 target_link_libraries(scale ${LIBS})
 target_link_libraries(rotate ${LIBS})
+target_link_libraries(translate ${LIBS})
 target_link_libraries(test_math ${LIBS})
 target_link_libraries(test_svd ${LIBS})
 target_link_libraries(test_stitch ${LIBS})
+target_link_libraries(test_utils ${LIBS})
+target_link_libraries(test_panorama ${LIBS})
