adding new tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ add_executable(test_svd test_SVD.cpp)
 add_executable(test_stitch test_stitch.cpp)
 add_executable(test_utils test_utils.cpp)
 add_executable(test_panorama test_panorama.cpp)
+add_executable(test_opencv test_opencv.cpp)
 
 target_link_libraries(scale ${LIBS})
 target_link_libraries(rotate ${LIBS})
@@ -15,3 +16,4 @@ target_link_libraries(test_svd ${LIBS})
 target_link_libraries(test_stitch ${LIBS})
 target_link_libraries(test_utils ${LIBS})
 target_link_libraries(test_panorama ${LIBS})
+target_link_libraries(test_opencv ${LIBS})
