--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_executable(scale test_scale.cpp)
-add_executable(rotate test_rotate.cpp)
-add_executable(translate test_translate.cpp)
+add_executable(test_scale test_scale.cpp)
+add_executable(test_rotate test_rotate.cpp)
+add_executable(test_translate test_translate.cpp)
 add_executable(test_math test_math.cpp)
 add_executable(test_svd test_SVD.cpp)
 add_executable(test_stitch test_stitch.cpp)
@@ -8,9 +8,9 @@ add_executable(test_utils test_utils.cpp)
 add_executable(test_panorama test_panorama.cpp)
 add_executable(test_opencv test_opencv.cpp)
 
-target_link_libraries(scale ${LIBS})
-target_link_libraries(rotate ${LIBS})
-target_link_libraries(translate ${LIBS})
+target_link_libraries(test_scale ${LIBS})
+target_link_libraries(test_rotate ${LIBS})
+target_link_libraries(test_translate ${LIBS})
 target_link_libraries(test_math ${LIBS})
 target_link_libraries(test_svd ${LIBS})
 target_link_libraries(test_stitch ${LIBS})
