add fast corner tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,5 +23,8 @@ tester(test_two test_twoview.cpp)
 # Misc
 tester(test_cpp test_cpp.cc)
 
+# fast corner detector
+tester(test_fast_corners test_fast_corners.cpp)
+
 add_subdirectory(ceres)
 add_subdirectory(slam)
