--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(Pangolin REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(Ceres REQUIRED)
 find_package(fast REQUIRED)
+find_package(vikit REQUIRED)
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
@@ -24,6 +25,7 @@ include_directories(${HEADERS}
                     ${Pangolin_INCLUDE_DIRS}
                     ${CERES_INCLUDE_DIRS}
                     ${fast_INCLUDE_DIRS}
+                    ${vikit_common_INCLUDE_DIRS}
                     ${Eigen3_INCLUDE_DIRS})
 
 set(SRCS
@@ -40,7 +42,8 @@ set(SRCS
    src/viewer.cpp
    src/config.cpp
    src/initialization.cpp
-   src/features.cpp)
+   src/features.cpp
+   src/camera.cpp)
 add_library(DR3_LIBS SHARED ${SRCS})
 
 list(APPEND LIBS
@@ -48,6 +51,7 @@ list(APPEND LIBS
    ${OpenCV_LIBRARIES}
    ${Pangolin_LIBRARIES}
    ${fast_LIBRARIES}
+   ${vikit_common_LIBRARIES}
    ${Eigen3_LIBS}
    ${CERES_LIBRARIES})
 
