--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,14 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(OpenCV_DIR /usr/local/share/OpenCV)
 set(Pangolin_DIR /usr/local/share/Pangolin/)
+set(vikit_DIR /home/kv/slam/svo/rpg_vikit/vikit_common/build)
 find_package(OpenCV REQUIRED)
 find_package(glfw3 REQUIRED)
 find_package(Pangolin REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(Ceres REQUIRED)
 find_package(fast REQUIRED)
-find_package(vikit REQUIRED)
+find_package(vikit_common REQUIRED)
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
